# VPNStatus

./: .gitignore  CMakeLists.txt  README.md
Common/: ACCWManager.h  ACCWManager.m  ACConnectionManager.h  ACConnectionManager.m  ACNEService.h  ACNEService.m  ACNEServicesManager.h  ACNEServicesManager.m  ACPreferences.h  ACPreferences.m  CMakeLists.txt
VPN.xcodeproj/: project.pbxproj
VPNStatus/: AppDelegate.m  CMakeLists.txt  Info.plist  Info.plist.in
VPNStatus/Assets.xcassets/VPNStatusItemOffImage.imageset/: Contents.json
VPNStatus/Assets.xcassets/VPNStatusItemOnImage.imageset/: Contents.json
VPNStatus/Assets.xcassets/VPNStatusItemPauseImage.imageset/: Contents.json
scripts/: prepare_icons.sh
vpnutil/: CMakeLists.txt  main.m
